--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
     "oauthio": "^0.3.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.4",
+    "express-session": "^1.0.4"
   }
 }
