--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "express-session": "^1.0.4",
     "jade": "~1.9.1",
+    "mongodb": "^2.0.16",
     "morgan": "~1.5.1",
     "oauthio": "^0.3.1",
     "serve-favicon": "~2.2.0",
-    "socket.io": "^1.3.4",
-    "express-session": "^1.0.4"
+    "socket.io": "^1.3.4"
   }
 }
