--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "roboto-fontface": "~0.3.0",
     "socket.io-client": "~1.3.5",
     "moment": "~2.9.0",
-    "livestampjs": "~1.1.2"
+    "livestampjs": "~1.1.2",
+    "svg4everybody": "~1.0.0"
   }
 }
